Adiciona um template para a parte da feira, com menu

--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -430,3 +430,8 @@ img.b-lecture {
 	max-height: 100px;
 	display: block;
 }
+
+.side-nav label {
+  color: $header-font-color;
+  font-weight: bold;
+}
