--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -431,7 +431,23 @@ img.b-lecture {
 	display: block;
 }
 
+img.image-center {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
 .side-nav label {
   color: $header-font-color;
   font-weight: bold;
+}
+
+.company-in-fair {
+	min-height: 350px;
+	img {
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+		height: 100px;
+	}
 }
