20 minutos de intervalo pro time picker

--- a/management/templates/management/business_change.html
+++ b/management/templates/management/business_change.html
@@ -66,6 +66,8 @@
       today: '',
     });
     $('input[id$="datetime_1"]').pickatime({
+      min: '10:00',
+      interval: 20,
       format: 'HH:i',
     });
 	</script>
