--- a/management/templates/management/business_change.html
+++ b/management/templates/management/business_change.html
@@ -66,7 +66,7 @@
       today: '',
     });
     $('input[id$="datetime_1"]').pickatime({
-      min: '10:00',
+      min: [10, 0],
       interval: 20,
       format: 'HH:i',
     });
