--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -448,6 +448,9 @@ img.image-center {
 		margin-left: auto;
 		margin-right: auto;
 		display: block;
-		height: 100px;
 	}
+}
+
+.company-logo-container {
+	height: 100px;
 }
