--- a/website/templates/website/event_details.html
+++ b/website/templates/website/event_details.html
@@ -1,8 +1,8 @@
 {% extends "website/base.html" %}
-
+{% load cms_tags %}
 {% block base_content %}
     <div class="row">
-        <a class="button" href="/programacao">Voltar para Programação</a>
+        <a class="button" href="{% page_url "programacao" %}">Voltar para Programação</a>
     </div>
 	{% include template_name %}
 {% endblock %}
