Video teaser agora é um plugin.

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -7,7 +7,7 @@
     <h2>De 18 a 22 de agosto de 2014</h2>
 	<div class="row" id="video-apresentacao">
 		<div class="flex-video widescreen">
-			<iframe width="853" height="480" src="//www.youtube.com/embed/QQ7uVYVIgjE?rel=0" allowfullscreen></iframe>
+      {% placeholder "teaser" %}      
 		</div>
 	</div>
 	{% if signup_allowed and not user.is_authenticated %}
