--- a/website/templates/website/templatetags/render_sponsors.html
+++ b/website/templates/website/templatetags/render_sponsors.html
@@ -1,9 +1,10 @@
 {% load thumbnail %}
+{% load cms_tags %}
 {% if sponsors %}
   <div class="sponsors">
     <div class="row">
       <div class="large-12 columns">
-        <h2 class="text-center blue-bg">Patrocinadores <small><a class="dark-bg" href="/contato">Quer ser um patrocinador?</a></small></h2>
+        <h2 class="text-center blue-bg">Patrocinadores <small><a class="dark-bg" href="{% page_url "contato" %}">Quer ser um patrocinador?</a></small></h2>
         <div class="row grid-logo">
           <ul class="small-block-grid-1 ultrabig">
             {% for sponsor in adamantium_sponsors %}
