Modifica cor do título ao registrar.

--- a/website/templates/registration/activation_failed.html
+++ b/website/templates/registration/activation_failed.html
@@ -5,7 +5,7 @@
 {% block base_content %}
 	<div class="row">
 		<div class="large-12 columns">
-			<h1>A ativação da sua conta falhou</h1>
+			<h1 class="blue-bg">A ativação da sua conta falhou</h1>
 			<p>Não foi possível ativar a sua conta. Se você acha que isto é um
 			erro, entre em <a href="{% page_url "contato" %}">contato</a> e
 			informe a seguinte chave de ativação:</p>
