--- a/website/templates/registration/signup_closed.html
+++ b/website/templates/registration/signup_closed.html
@@ -5,7 +5,7 @@
 {% block base_content %}
 	<div class="row">
 		<div class="large-12 columns">
-			<h1>Calma! As inscrições ainda não abriram!</h1>
+			<h1 class="blue-bg">Calma! As inscrições ainda não abriram!</h1>
 			<p>As inscrições para a Semcomp vão abrir no começo de agosto.</p>
 			<p>Até lá, acompanhe <a href="{% url "aldryn_blog:latest-posts" %}">nosso blog</a> e nossas redes sociais!</p>
 		</div>
