--- a/website/templates/registration/signup_complete.html
+++ b/website/templates/registration/signup_complete.html
@@ -5,7 +5,7 @@
 {% block base_content %}
 	<div class="row">
 		<div class="large-12 columns">
-			<h1>Sua conta foi criada!</h1>
+			<h1 class="blue-bg">Sua conta foi criada!</h1>
 			<p>Um email foi enviado para o endereço informado. Clique no <em>link</em> dentro do email para ativar sua conta.</p>
 		</div>
 	</div>
