Adiciona linebreaks no email do formulario de contato.

--- a/semcomp_contact_form/templates/contact_form/contact_form_message.html
+++ b/semcomp_contact_form/templates/contact_form/contact_form_message.html
@@ -11,7 +11,7 @@
         <p><strong>Enviado por:</strong> {{ name }}</p>
         <p><strong>E-mail:</strong> {{ email }}</p>
         <p><strong>Mensagem:</strong></p>
-        <p>{{ body }}</p>
+        {{ body|linebreaks }}
         </div>
         <div style='padding: 15px;'>
             <div style='float:right;'>
