Em Processos Seletivos adiciona link para o site da empresa a partir da imagem do logo.

--- a/website/templates/website/templatetags/render_recruitment_processes.html
+++ b/website/templates/website/templatetags/render_recruitment_processes.html
@@ -13,7 +13,9 @@
 					<div class="row">
 						{% with process.company as company %}
 							<div class="small-4 columns">
+							<a href="{{company.url}}">
 								<img src="{{company.logo.url}}">
+							</a>
 							</div>
 							<div class="small-8 columns">
 								<h3>{{company.name}}</h3>
