--- a/website/templates/website/templatetags/render_sponsors.html
+++ b/website/templates/website/templatetags/render_sponsors.html
@@ -1,6 +1,6 @@
 {% load thumbnail %}
 {% load cms_tags %}
-{% if sponsors %}
+{% if adamantium_sponsors or diamond_sponsors or sponsors %}
   <div class="sponsors">
     <div class="row">
       <div class="large-12 columns">
