Mais uma mudança de cor.

--- a/website/templates/registration/activation_complete.html
+++ b/website/templates/registration/activation_complete.html
@@ -5,7 +5,7 @@
 {% block base_content %}
 	<div class="row">
 		<div class="large-12 columns">
-			<h1>Sua conta foi ativada!</h1>
+			<h1 class="blue-bg">Sua conta foi ativada!</h1>
 			<p>Você agora pode <a href="{% url "login" %}">entrar no site</a>
 			e acessar a sua <a href="{% url "account_overview" %}">área de usuário</a>.</p>
 		</div>
