--- a/website/templates/website/templatetags/render_recruitment_processes.html
+++ b/website/templates/website/templatetags/render_recruitment_processes.html
@@ -1,4 +1,3 @@
-{% load semcomp %}
 <div class="row">
 	<div class="text-center">
 		<h1 class="blue-bg">Processos seletivos</h1>
@@ -22,7 +21,7 @@
 								<h3>{{company.name}}</h3>
 								<p>Horário: {{process.start_datetime|time:"TIME_FORMAT"}} - {{process.end_datetime|time:"TIME_FORMAT"}}</p>
 								{% if process.place %}
-								<p>Local: <a href="{% place_map_url process.place %}" target="_blank">{{process.place}}</a></p>
+								<p>Local: <a href="{{process.place.static_map.url}}">{{process.place}}</a></p>
 								{% endif %}
 							</div>
 						{% endwith %}
