Adiciona interface de edição de mensagens
Esse commit cria o modelo "Message" e prepara a infraestrutura de
administração pra edição dessas mensagens. É usado o CKEditor como
editor de texto para enviar as mensagens de volta.

A tabela Message tem um campo "last_ping" que vai ser usado para
informar quando alguém estiver editando a mensagem, para que duas
pessoas não respondam ao mesmo tempo. Preferi usar um indicador a um
"lock" pois alguém pode parar de responder e a mensagem podia ficar
esquecida travada.

--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -16,6 +16,11 @@
 						<i class="fa fa-fw fa-home"></i> {% trans "Visão geral" %}
 					</a>
 				</li>
+				<li {% if active_messages %}class="active"{% endif %}>
+					<a href="{% url "management_messages" %}">
+						<i class="fa fa-fw fa-envelope"></i> {% trans "Mensagens" %}
+					</a>
+				</li>
 				<li {% if active_places %}class="active"{% endif %}>
 					<a href="{% url "management_places" %}">
 						<i class="fa fa-fw fa-map-marker"></i> {% trans "Locais" %}
