Envia email para admins com URL pra responder
E envia a resposta pro usuário também

--- a/management/templates/management/messages_detail_include.html
+++ b/management/templates/management/messages_detail_include.html
@@ -9,7 +9,7 @@
 			</div>
 		</div>
 		<div class="message-time">
-			<p title="{{message.date_sent}}">{% if message.is_old %}{{message.date_sent|date}}{% else %}{{message.date_sent|time:"TIME_FORMAT"}}{% endif %}</p>
+			<p title="{{message.date_sent}}">{% if message.is_old %}{{message.date_sent|date:"SHORT_DATE_FORMAT"}}{% else %}{{message.date_sent|time:"TIME_FORMAT"}}{% endif %}</p>
 		</div>
 	</div>
 	<div class="email-body">
