--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -373,6 +373,14 @@ a .schedule-event:hover {
         text-align: justify;
         text-indent: 2rem;
     }
+    dt {
+        color:#666;
+        font-size:1.8rem;
+    }
+    dd {
+        color:#999;
+        font-size:1.5rem;
+    }
 }
 
 label {
