--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -470,7 +470,7 @@ img.image-center {
 		background-color: darken($table-even-row-bg, 20%);
 	}
 
-	.email-replied {
+	.email-status {
 		width: 5%;
 		text-align: center;
 	}
