--- a/management/templates/management/messages.html
+++ b/management/templates/management/messages.html
@@ -66,7 +66,8 @@
 			$.get(
 				'{% url "management_messages_ping" %}',
 				{
-					'ids': message_ids
+					'ids': message_ids,
+					'removeSelf': true
 				},
 				function(data, status, xhr) {
 					if (status == 'success' && !data.error) {
