Corrige bug: acesso a company.logo.url
Não acessa company.logo.url se company.logo não existe. O atributo só funciona se um arquivo existir, senão lança exceção

--- a/management/templates/management/companies_change.html
+++ b/management/templates/management/companies_change.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="row">
 					<div class="medium-4 columns">
-						<img src="{{ company.logo.url|default:"http://placehold.it/200&text=Sem+Logo" }}" >
+						<img src="{% if company.logo %}{{company.logo.url}}{% else %}http://placehold.it/200&text=Sem+Logo{% endif %}" >
 					</div>
 
 					{% include "management/render_field.html" with field=form.logo width="medium-8 " only %}
